[project]
name = "hoa-auditor"
version = "2.0.0"
description = "HOA Auditor using Google ADK Multi-Agent architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3.0",
    "google-agents-cli>=0.5.1",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.6",
    "streamlit>=1.35.0",
    "supabase>=2.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
